crates/pvm-contract-macros/tests/ui/payable_on_no_receiver_method.stderr
error: associated function (no `self` receiver) cannot be marked `#[payable]`; payable callables must take `&mut self`
  --> tests/ui/payable_on_no_receiver_method.rs:9:9
   |
 9 | /         #[pvm_contract_macros::method]
10 | |         #[pvm_contract_macros::payable]
11 | |         pub fn deposit() {}
   | |___________________________^
